# peclet-examples

./: .gitignore  ISSUES.md  PROGRESS.md  README.md  STYLE_GUIDE.md  _quarto.yml  index.qmd  pyproject.toml  references.bib  render_example.sh
.github/workflows/: publish.yml
assets/: gallery.css
benchmarks/: index.qmd
benchmarks/dem-bulk-dosta2024/: index.qmd
benchmarks/staggered-vs-collocated/: index.ipynb  index.qmd
drafts/: README.md
drafts/backward-facing-step/: index.qmd
drafts/pore-mesh-voronoi/: index.qmd
examples/backward-facing-step/: bfs_cache.npz  index.ipynb  index.qmd  make_cache.py
examples/bidisperse-segregation/: index.ipynb  index.qmd
examples/channel-mms/: index.ipynb  index.qmd
examples/cylinder-vortex-street/: index.ipynb  index.qmd  vortex_street_cache.npz
examples/developing-channel/: index.ipynb  index.qmd
examples/fluidized-bed/: analyze_verma.py  compute_verma_profile.py  index.ipynb  index.qmd  make_verma_bed.py  render_verma_movie.py  verma_profile.npz
examples/hcs-clustering/: index.ipynb  index.qmd  make_hcs_gas_bvk.py  make_hcs_gas_bvk_h2.py  make_hcs_gas_mfix.py  make_hcs_mfix.py
examples/lid-driven-cavity/: index.ipynb  index.qmd
examples/pipe-poiseuille/: index.ipynb  index.qmd
examples/poiseuille-ibm/: index.ipynb  index.qmd
examples/pore-mesh-voronoi/: .gitignore  index.ipynb  index.qmd
examples/random-packed-bed/: index.ipynb  index.qmd
examples/rayleigh-benard/: index.ipynb  index.qmd
examples/ring-packed-bed/: index.ipynb  index.qmd
sanity-checks/: index.ipynb  index.qmd
(+111 files in other folders)
