[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peclet-examples"
version = "0.1.0"
description = "Worked, runnable examples for the peclet simulation suite."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

# The heavy simulation dependency is optional so the pure-NumPy examples (and the
# render-from-frozen CI) install fast. Add the real solver with:  pip install -e .[sim]
[project.optional-dependencies]
sim = ["peclet>=0.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/peclet_examples"]
